--- a/webapp/WEB-INF/template/pc/common/meta.html
+++ b/webapp/WEB-INF/template/pc/common/meta.html
@@ -1,12 +1,26 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<!-- 人保的logo -->
-<link rel="shortcut icon" href="${ctxPath}/portal/pc/img/icon20161102.png" type="image/x-icon" />
-<title>
-${topic.meta_title}</title>
-<meta name="keywords" content="${topic.meta_keywords}">
-<meta name="description" content="${topic.meta_desc}" />
-<meta http-equiv="pragma" content="no-cache" />
-<meta http-equiv="Cache-Control" content="no-cache" />
+<head>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+<title>上海金网通信技术发展有限公司</title>
+<meta name="keywords" content="${topic.meta_keywords}" />
+<meta name="description" content="${topic.meta_desc}"/>  
+<link href="${static_ctx}/portal/css/lib.min_1.css?version=${version}" rel="stylesheet" type="text/css" />
+<script type="text/javascript" src="${static_ctx}/portal/js/jquery_1.js?version=${version}"></script>
+<script type="text/javascript" src="${static_ctx}/portal/js/lib.min_1.js?version=${version}"></script>
+<script src="${static_ctx}/portal/js/b2c161405da047d0be00fc1fede6abbe.js?version=${version}"></script>
+<script src="${static_ctx}/portal/js/ac281114df77474888e38b4a23d1dd95.js?version=${version}"></script>
+<style type="text/css">
+#box_main	{
+	min-height: 747px;
+	background: #ffffff!import; 
+}
+	
+#box_footer{
+/* position:fixed; */
+bottom:0px;
+left:0px;
+clear:both; 
+width: 100%;
+}
+</style>
 
-
+</head>   
