--- a/webapp/WEB-INF/template/pc/common/footer.html
+++ b/webapp/WEB-INF/template/pc/common/footer.html
@@ -1,86 +1,86 @@
-<div class="main3 wrap">
- <!-- <div class="m3-box" style="width:15%"></div> -->
-  <div class="m3-box">
-    <h3 class="title">投资者权益保障</h3>
-    <ul class="list">
-      <li><a href="${ctxPath}/pc/customer/riskLetter">风险提示函</a></li>
-      <li><a href="${ctxPath}/pc/newsInfo/articleInfo?id=1741&topicCode=tzzjxPage">投资人权益须知</a></li>
-    </ul>
-  </div>
-  <div class="m3-box">
-    <h3 class="title">新闻资讯</h3>
-    <ul class="list">
-      <!--  <li><a href="${ctxPath}/pc/newsInfo/newsList">新闻快报</a></li> -->
-      <li><a href="${ctxPath}/pc/newsInfo/activitiesList">最新动态</a></li>
-      <li><a href="${ctxPath}/pc/newsInfo/companynotices">公司公告</a></li>
-      <li class="has-child">
-        <div class="yybox"><a href="${ctxPath}/pc/newsInfo/adviseList">投资经纬</a>
-          <ul class="child-list-box sss yl_top">
-            <li><a href="${ctxPath}/pc/newsInfo/adviseList">投资观点</a></li>
-            <li><a href="${ctxPath}/pc/newsInfo/managerWList">基金经理随笔</a></li>
-          </ul>
-        </div>
-      </li>
-      <li class="has-child">
-        <div class="yybox"><a href="${ctxPath}/pc/newsInfo/informationdisclosure/quarterNewsList">信息披露</a>
-          <ul class="child-list-box sss">
-            <!--  <li><a href="${ctxPath}/pc/newsInfo/noticesList">基金公告</a></li> -->
-            <li><a href="${ctxPath}/pc/newsInfo/informationdisclosure/quarterNewsList">定期报告</a></li>
-            <!-- <li><a href="${ctxPath}/pc/newsInfo/informationdisclosure/yearNewsList">年报</a></li> -->
-            <!-- <li><a href="${ctxPath}/pc/newsInfo/tempNoticeList">临时公告</a></li> -->
-            <li><a href="${ctxPath}/pc/newsInfo/informationdisclosure/lawFileList">法律文件</a></li>
-          </ul>
-        </div>
-      </li>
-      <!-- <li><a href="${ctxPath}/pc/newsInfo/adviseList">投资建议</a></li> -->
-    </ul>
-  </div>
-<div class="m3-box">
-    <h3 class="title">产品专区</h3>
-    <ul class="list">
-      <!-- index-全部:0; 混合:2; 债券:3; 货币:4; ETF:5; 股票:6 -->
-      <li><a href="${ctxPath}/pc/product?index=0">全部</a></li>
-
-      
-      <!-- <li><a href="${ctxPath}/pc/product?index=3">债券型</a></li>
-      <li><a href="${ctxPath}/pc/product?index=6">股票型</a></li>
-      <li><a href="${ctxPath}/pc/product?index=5">ETF型</a></li>
-      <li><a href="${ctxPath}/pc/product?index=2">混合型</a></li> -->
-    </ul>
-  </div>
-  <div class="m3-box">
-    <h3 class="title">客户服务</h3>
-    <ul class="list">
-      <li class="has-child">
-        <div class="yybox"><a href="${ctxPath}/pc/customer/dhfw">服务介绍</a>
-          <ul class="child-list-box sss">
-            <li><a href="${ctxPath}/pc/customer/dhfw">电话服务</a></li>
-            <!-- <li><a href="${ctxPath}/pc/customer/dxfw">短信服务</a></li> -->
-            <li><a href="${ctxPath}/pc/customer/yjfw">邮件服务</a></li>
-          </ul>
-        </div>
-      </li>
-      <!-- <li><a href="#">常见问题</a></li> -->
-      <li><a href="${ctxPath}/pc/customer/financeList">投资理财</a></li>
-      <li><a href="${ctxPath}/pc/customer/xzfw">下载服务</a></li>
-      <li><a href="${ctxPath}/pc/customer/bzzx">帮助中心</a></li>
-      <!-- <li><a href="${ctxPath}/pc/about/lxwm">联系我们</a></li> -->
-      <li><a href="${ctxPath}/pc/customer/tsyjx">投诉与建议</a></li>
-      <li><a href="${ctxPath}/pc/customer/tzzjx">投资者教育</a></li>
-    </ul>
-  </div>
-  <div class="m3-box noborder">
-    <h3 class="title">关于我们</h3>
-    <ul class="list">
-      <li><a href="${ctxPath}/pc/about/gsjj">公司简介</a></li>
-      <li><a href="${ctxPath}/pc/about/zczc">总裁致辞</a></li>
-      <li><a href="${ctxPath}/pc/about/djzl">党建专栏</a></li>
-      <li><a href="${ctxPath}/pc/about/tzln">投资理念</a></li>
-      <li><a href="${ctxPath}/pc/about/zxdt">大 事 记</a></li>
-      <li><a href="${ctxPath}/pc/about/tdfc">团队风采</a></li>
-      <li><a href="${ctxPath}/pc/about/zxns">招贤纳士</a></li>
-      <li><a href="${ctxPath}/pc/about/lxwm">联系我们</a></li>
-    </ul>
-  </div>
-  <div class="clear"> </div>
+<div id="box_footer">
+	<div id="box_footer_sub1">
+		<div class="columnSpace"
+			id="elem-FrontSpecifies_show01-1441964309042" >
+			<div id="FrontSpecifies_show01-1441964309042"
+				class="FrontSpecifies_show01-d3_c1">
+				<div class="describe htmledit"> 
+					<div style="width: 440px; height: 38px;">
+						<div
+							style="text-align: center; width: 210px; float: left; height: 21px; padding-top: 10px;">
+							<!--<select name="select"
+								onchange="javascript:window.open(this.options[this.selectedIndex].value)"
+								style="width: 170px;"><option selected="selected"
+									value="#">-----控股公司-----</option>
+								<option value="http://hwachip.com/">上海金网通信技术发展有限公司</option>
+								<option value="http://www.hwacreate-mw.com.cn/">北京华力睿源微波技术有限公司</option>
+								<option value="http://www.highforever.com/index.asp">北京恒创开源科技发展有限公司</option>
+								<option value="http://www.credit-top.com/">北京怡嘉行科技有限公司</option>
+								<option value="http://www.tj-xince.com/">天津市新策电子设备科技有限公司</option>
+								<option value="#">北京华力方元科技有限公司</option></select>-->
+						</div>
+						<div
+							style="text-align: center; width: 210px; float: left; height: 21px; padding-top: 10px;">
+							<!--<select name="select"
+								onchange="javascript:window.open(this.options[this.selectedIndex].value)"
+								style="width: 170px;"><option selected="selected"
+									value="#">-----友情链接-----</option>
+								<option value="http://www.beidou.gov.cn">北斗网</option>
+								<option value="http://www.zpark.com.cn/">中关村软件园</option>
+								<option value="http://www.glac.org.cn/">中国卫星导航定位协会</option>
+								<option value="http://www.chinabeidou.gov.cn/">中国卫星导航定位应用管理中心</option></select>-->
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="box_footer_sub2">
+		<div id="box_footer_sub2_sub1">
+			<div class="clearBoth"></div>
+			<div  class="columnSpace"
+				id="elem-FrontSpecifies_show01-1442192322425" >
+				<div id="FrontSpecifies_show01-1442192322425"
+					class="FrontSpecifies_show01-d3_c1">
+					<div class="describe htmledit"> 
+						<p>
+							<span style="font-size: 12px;"><span
+								style="margin-top: 5px; font-family: 微软雅黑, tahoma, arial, sans-serif; float: left;"><a
+									href="javascript:void(0)"></a> 
+									<a
+									href="javascript:void(0)"></a>  
+									<a href="javascript:void(0)"></a>   <a
+									href="javascript:void(0)"></a><a
+									href="javascript:void(0)"></a></span></span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="box_footer_sub2_sub2">
+			<div  class="columnSpace"
+				id="elem-FrontSpecifies_show01-1442195933820" >
+				<div id="FrontSpecifies_show01-1442195933820"
+					class="FrontSpecifies_show01-d3_c1">
+					<div class="describe htmledit">
+						<p>
+							<span style="font-size: 12px;"><span
+								style="margin-top: 5px; font-family: 微软雅黑, tahoma, arial, sans-serif; float: right;">上海金网通信技术发展有限公司
+									© 2015,   沪ICP备18007508号
+									号    <a href="http://www.miitbeian.gov.cn"
+									target="_blank">沪ICP备18007508号</a>    <a
+									href="http://www.goldnet.net.cn/manager/admin/console" target="_blank">后台管理</a>
+							</span></span>
+						</p>
+<style type="text/css">
+.FrontProducts_detail02-d1_c1 .detail .describe {
+	color: #000;
+	line-height: 2em;
+}
+</style>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
